add latest code

--- a/app/globals.css
+++ b/app/globals.css
@@ -157,7 +157,7 @@ nav a {
 }
 
 .business {
-  background-image: url("/images/section-pattern.jpg");
+  background-image: url("/images/section-pattern.webp");
   background-color: #f4f4f5;
   background-size: cover;
   background-position: center;
